# ELB_ARDU_DISC4

./: README.md
ardu/: README.md  platformio.ini
ardu/licenses/: Arduino-Log.txt  TimerOne.txt  Vrekrer_scpi_parser.txt
ardu/src/: main.cpp
py/: LICENSE  README.md  install.py  pyproject.toml
py/examples/: ardu_disc_example_GUI.py  ardu_disc_example_timing_sweep.py
py/src/elb_ardu_disc/: __init__.py  module.py  spi.py
py/tests/: test_elb_ardu_disc.py
